feat: adding pagination, mappers and others features
